🐞fix(live2d): promote z-index

--- a/src/themes/reacg/style/markdown.scss
+++ b/src/themes/reacg/style/markdown.scss
@@ -69,6 +69,7 @@
         border: none;
         height: auto !important;
         font-size: 14px;
+        border: none!important;
         td,
         th,
         td {
